CodeFormerのbasicsrエラーを修正する

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,6 +11,7 @@
 [submodule "repositories/CodeFormer"]
     url = https://github.com/sczhou/CodeFormer.git
     path = repositories/CodeFormer
+    batch = c5b4593074ba6214284d6acd5f1719b6c5d739af
 
 [submodule "repositories/BLIP"]
     url = https://github.com/salesforce/BLIP.git
