--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ Pillow
 pytorch_lightning==1.7.7
 realesrgan
 scikit-image>=0.19
-timm==0.4.12
+# timm==0.4.12
+timm==0.6.12
 transformers==4.25.1
 torch
 einops
@@ -31,3 +32,4 @@ torchsde
 safetensors
 psutil
 rich
+torchvision
